--- a/src/ratpack/templates/index.html
+++ b/src/ratpack/templates/index.html
@@ -20,13 +20,19 @@
 </head>
 <body>
   <header>
-    <h1>Ratpack</h1>
-    <p>a micro web framework for Java &amp; Groovy</p>
+    <h1>Bookmarks in Groovy</h1>
+    <p>A web bookmark application created in the Ratpack framework for Java &amp; Groovy</p>
   </header>
 
   <section>
     <h1>${model.title}</h1>
-    <p>This is the main page for your Ratpack app.</p>
+    <p>Bookmarks found for user:</p>
+    <% if (model.bookmarks.size() == 0) { %>
+      <p>No bookmarks have been created yet.</p>
+    <% } else { model.bookmarks.each { %>
+      <p><a href="${it.url}">${it.title}</a></p>
+      <p>Tags: ${it.tags}</p>
+    <% } } %>
   </section>
 
   <footer class="site-footer"></footer>
